<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MyPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/myPage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="25dp"
            android:text="@string/my_title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="35dp"
            android:src="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myPage_tv" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/profileImage_iv"
            app:layout_constraintStart_toEndOf="@id/profileImage_iv"
            app:layout_constraintTop_toTopOf="@id/profileImage_iv">

            <TextView
                android:id="@+id/nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="박지원"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="ji11won@naver.com"
                android:textColor="#CBC7C7"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/my_my_record"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage_iv" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/organization_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:outlineSpotShadowColor="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage_iv"
            app:strokeColor="#9B9B9B"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="30dp">

                <TextView
                    android:id="@+id/tv_todo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_done_todo"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_todo_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="3개"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_todo_title"
                    app:layout_constraintStart_toEndOf="@id/tv_todo_title"
                    app:layout_constraintTop_toTopOf="@id/tv_todo_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/recentAlarm_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/organization_cv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_alarm"
            android:textColor="#17171796"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/recentAlarm_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recentAlarm_iv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="#E3E0E0"
            app:layout_constraintTop_toBottomOf="@id/recentAlarm_iv" />

        <ImageView
            android:id="@+id/editMyProfile_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recentAlarm_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_edit"
            android:textColor="#17171796"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/editMyProfile_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editMyProfile_iv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="#E3E0E0"
            app:layout_constraintTop_toBottomOf="@id/editMyProfile_iv" />

        <ImageView
            android:id="@+id/notification_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editMyProfile_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_notification"
            android:textColor="#17171796"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/notification_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/notification_iv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="#E3E0E0"
            app:layout_constraintTop_toBottomOf="@id/notification_iv" />

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:text="1.0.1"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_version"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/version_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/version_tv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="#E3E0E0"
            app:layout_constraintTop_toBottomOf="@id/version_tv" />

        <ImageView
            android:id="@+id/logout_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/version_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_logout"
            android:textColor="#17171796"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/logout_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logout_iv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="#E3E0E0"
            app:layout_constraintTop_toBottomOf="@id/logout_iv" />

        <ImageView
            android:id="@+id/withdraw_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_withdrawal"
            android:textColor="#17171796"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/withdraw_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/withdraw_iv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>